changed the input field to avoid overflow for large text input (#30)
* changed the input field to avoid overflow for large text input

* fixed the search input overflow issue while keeping input box and button icons in the same flow

--- a/src/popup/sass/components/_darkmode.scss
+++ b/src/popup/sass/components/_darkmode.scss
@@ -4,7 +4,7 @@ body.dark {
   background-color: $color-darkmode-1;
   color: $color-white;
 
-  input {
+  input, .section-search {
     background-color: $color-darkmode-2 !important;
     color: $color-white !important;
   }
